<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Martín Rico Martínez on 15/04/18 13:05
  ~ Copyright (c) 2018. All rights reserved
  ~
  ~ Last modified 6/04/18 11:03
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.75"
        android:scaleType="fitXY"
        android:src="@drawable/sanfran" />

    <LinearLayout
        android:id="@+id/linear_focus"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="150dp">

        <LinearLayout
            android:id="@+id/main_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp"
            android:focusable="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/username_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/generic_digits_input"
                    android:fontFamily="@font/ubuntu_light"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:hint="@string/generic_input_username_hint" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:digits="@string/digits_email_input"
                    android:fontFamily="@font/ubuntu_light"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:hint="@string/generic_input_email_hint" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:digits="@string/generic_digits_input"
                    android:fontFamily="@font/ubuntu_light"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:hint="@string/generic_input_pass_hint"/>

                <TextView
                    android:id="@+id/error_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:textColor="@color/red"
                    tools:text="@string/input_error_empty_fields" />
            </LinearLayout>

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/ubuntu_regular"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/generic_register" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/already_account_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/register_already_account" />

                <TextView
                    android:id="@+id/sign_in_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_regular"
                    android:gravity="center"
                    android:textColor="@color/orange"
                    android:text="@string/generic_sign_in" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>